examples/datalog/15_arithmetic/40_mod_operation.dl
% Test: Modulo operation
% Expected: Remainder calculation
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_mod
.kg use test_mod

+nums[(10,), (15,), (20,), (17,)].

% Mod 3
mod_result(N, R) :- nums(N), R = N % 3.

?- mod_result(N, R).

.kg use default
.kg drop test_mod
